Fixes most common layout bugs in iOS safari And some in Firefox

--- a/client/components/Message/index.css
+++ b/client/components/Message/index.css
@@ -5,7 +5,6 @@
   margin-top: .75rem;
   margin-bottom: .75rem;
   transition: opacity .2s;
-  transform: translateX(0);
 
   &-meta {
     display: flex;
@@ -52,7 +51,7 @@
         border-left: 1px solid $color-grey-light;
         border-bottom: 1px solid $color-grey-light;
 
-        transform: translate3d(50%, 0, 0) rotate(45deg);
+        transform: translateX(50%) rotate(45deg);
       }
     }
   }
@@ -86,6 +85,14 @@
       background-color: red;
       color: white;
       border-radius: 16px;
+    }
+  }
+
+  &--preview {
+    opacity: .5;
+
+    &:hover {
+      opacity: 1;
     }
   }
 
