--- a/client/components/Navigation/index.css
+++ b/client/components/Navigation/index.css
@@ -21,7 +21,7 @@
 
     width: 100%;
     max-width: 100%;
-    min-height: 100%;
+    height: 100%;
 
     &, &.is-collapsed {
       padding-top: 4rem;
