--- a/client/components/Room/index.css
+++ b/client/components/Room/index.css
@@ -1,7 +1,7 @@
 .room {
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	height: 100%;
 	flex: 1;
 
 	&-messages {
@@ -11,25 +11,10 @@
 		flex: 1;
 
 		overflow: auto;
-		-webkit-overflow-scrolling: touch;
 
     background-color: #f5f5f5;
 
 		padding: 1.15em;
-
-  /* https://bugzilla.mozilla.org/show_bug.cgi?id=1042151 */
-    @-moz-document url-prefix() {
-     justify-content: flex-end;
-    }
-
-    &-preview {
-      opacity: .5;
-      transition: opacity .2s;
-
-      &:hover {
-        opacity: 1;
-      }
-    }
 	}
 
 	&-actions {
@@ -49,5 +34,14 @@
 		&-send {
 			margin-left: 1rem;
 		}
+	}
+}
+
+/* https://bugzilla.mozilla.org/show_bug.cgi?id=1042151 */
+body:not(:-moz-handler-blocked) .room-messages {
+	justify-content: flex-end;
+
+	.messages {
+		padding-bottom: 2em;
 	}
 }
