--- a/client/styles/_forms.css
+++ b/client/styles/_forms.css
@@ -27,6 +27,7 @@
     width: 100%;
 
     border-bottom: 2px solid rgba(#fff, .5);
+    border-radius: 0;
 
     &::placeholder {
       color: rgba(#fff, .5);
